--- a/JASA/journal_version.tex
+++ b/JASA/journal_version.tex
@@ -128,19 +128,19 @@
 \title{Stochastic Mixed Membership Models and Preferential Attachment in Social Networks}
 
 \author{{%%%% First author details
-\sc Insert First author name}$^*$,\\[2pt]
-Insert First author address\\
-$^*${\email{Corresponding author: Insert corresponding author email here}}\\[2pt]
+\sc Adrien Dulac}$^*$,\\[2pt]
+Univ. Grenoble Alpes, CNRS, Grenoble INP, LIG\\
+$^*${\email{Corresponding author: adrien.dulac@imag.fr}}\\[2pt]
 %%%%%%% Second author details
-{\sc Insert Second author name}\\[2pt]
-Insert second author address\\
-{Second author email}\\[6pt]
+{\sc Eric Gaussier}\\[2pt]
+Univ. Grenoble Alpes, CNRS, Grenoble INP, LIG\\
+{eric.gaussier@imag.fr}\\[6pt]
 %%%%%%%
 {\sc and}\\[6pt]
 %%%%%%% Third author details
-{\sc Insert third author} \\[2pt]
-Third author address\\
-{Third author email address}}
+{\sc Christine Largeron} \\[2pt]
+Univ Lyon, UJM-Saint-Etienne, CNRS, Institut d’Optique Graduate School, LHC\\
+{Christine.Largeron@univ-st-etienne.fr}}
 
 \maketitle
 
