--- a/JASA/content/preferential_v2.tex
+++ b/JASA/content/preferential_v2.tex
@@ -148,7 +148,7 @@ We say that \imb, in $\M_e$, satisfies the local preferential attachment effect 
 
 This definition can be seen as the continuous counterpart of Definition~\ref{def:locdeg-discrete}. If $x$ or $\epsilon$ is too large, the probability is null and is independent on $x$, hence the compatibility requirement with the domain of definition of $x$ and $d_{i,k}$. The following property shows that \imb\ satisfies the local preferential attachment effect under the (mild) assumption that $\mat{\hat{F}}$ follows a power law distribution.
 
-\begin{proposition}
+\begin{proposition}\label{prop:IMBlocal}
 Let us assume that $\mat{\hat{F}}$ follows a power law distribution, \textit{i.e.} that for all $i$ and $k$, $P(\hat{f}_{ik} > x) \sim L(x) x^{- \alpha + 1}$ where $L(x)$ is a slow varying function and $\alpha > 1$. Then \imb\ satisfies the local preferential attachment effect in $\M_e$.
 \end{proposition}
 
