--- a/JASA/content/preferential_v2.tex
+++ b/JASA/content/preferential_v2.tex
@@ -149,7 +149,7 @@ We say that \imb, in $\M_e$, satisfies the local preferential attachment effect 
 This definition can be seen as the continuous counterpart of Definition~\ref{def:locdeg-discrete}. If $\epsilon$ is too large, the probability is null and is independent on $x$, hence the compatibility requirement with the domain of definition of $x$ and $d_{i,k}$. The following property shows that \imb\ satisfies the local preferential attachment effect under the assumption that elements of $\mat{\hat{F}}$ follow a power law distribution.
 
 \begin{proposition}\label{prop:IMBlocal}
-Let us assume that elements of $\mat{\hat{F}}$ follow a power law distribution, \textit{i.e.} that for all $i$ and $k$, $pdf(\hat{f}_{ik}) \propto x^{- \alpha_{ik}}$ with $\alpha_{ik} > 1$ where $pdf$ denotes the probability density function. Then \imb\ satisfies the local preferential attachment effect in $\M_e$.
+Let us assume that elements of $\mat{\hat{F}}$ follow a power law distribution, \textit{i.e.} that for all $i$ and $k$, $pdf(\hat{f}_{ik}) \propto x^{- \alpha_{ik}}$ with $\alpha_{ik} > 1$ and where $pdf$ denotes the probability density function. Then \imb\ satisfies the local preferential attachment effect in $\M_e$.
 \end{proposition}
 
 \begin{proof}
@@ -165,7 +165,7 @@ where the last approximation is based on a first order Taylor expansion of the p
 \end{proof}
 
 \vspace{0.1cm}
- The power law distribution assumed here for $\hat{f}_{ik}$ directly translates the positive reinforcement effect of the Dirichlet Process \cite{HDP} at the basis of \imb, that corresponds to a burstiness phenomenon. The definitions that we have considered for the (local and global) preferential attachment effects are indeed extensions of the definitions for burstiness proposed in \cite{clinchant2010information}. Power law distributions have been often used to model bursty phenomena (\cite{barabasi_burst,clauset2009power} to cite but a few), and our assumption on $\hat{f}_{ik}$ reflects this usage.
+ The power law distribution assumed here for $\hat{f}_{ik}$ directly translates the positive reinforcement effect of the Dirichlet Process \cite{HDP} at the basis of \imb, that corresponds to a burstiness phenomenon. The definitions that we have considered for the (local and global) preferential attachment effects are indeed extensions of the definitions for burst iness proposed in \cite{clinchant2010information}. Power law distributions have been often used to model bursty phenomena (\cite{barabasi_burst,clauset2009power} to cite but a few), and our assumption on $\hat{f}_{ik}$ reflects this usage.
  % It is easy to see, using the same development as the one we have used, that power distributions are bursty in the sense of \cite{clinchant2010information}.
 
 We now present an experimental illustration of the above theoretical results.
