--- a/JASA/content/preferential_v2.tex
+++ b/JASA/content/preferential_v2.tex
@@ -1,7 +1,7 @@
 \section{Preferential attachment}
 \label{sec:burstiness}
 
-As mentioned before, preferential attachement can be global, in which case nodes are connected across communities, and/or local to the network communities. We first study global preferential for the models \ifm\ and \imb\ in the two contexts defined by $\mathcal{M}_g$ and $\mathcal{M}_e$. We then turn our attention to local preferential attachment.
+As mentioned before, preferential attachment can be global, in which case nodes are connected across communities, and/or local to the network communities. We first study global preferential for the models \ifm\ and \imb\ in the two contexts defined by $\mathcal{M}_g$ and $\mathcal{M}_e$. We then turn our attention to local preferential attachment.
 %The preferential attachment effect can be observed directly over the global network, or indirectly on latent classes.
 
 \subsection{Global preferential attachment}
@@ -99,7 +99,7 @@ We now turn to local preferential attachment that deals with the fact that prefe
 \subsection{Local preferential attachment}
 \label{sec:local_me}
 
-Local preferential attachment is a restriction of global preferential attachment at the community level and aims at capturing the fact that the more links a node has in a given community, the more links it will have in the future within this community. The latent classes used in \ifm\ and \imb\ play the role of latent communities gathering nodes sharing unobserved properties. Local preferential attachement can thus be studied in stochastic mixed membership models by studying how preferential attachement is captured within latent classes. This nevertheless entails that the latent classes be set in one way or another, meaning that the question of whether stochastic mixed membership models comply with the local preferential attachment effect only makes sense in $\me$, and not in $\mg$.
+Local preferential attachment is a restriction of global preferential attachment at the community level and aims at capturing the fact that the more links a node has in a given community, the more links it will have in the future within this community. The latent classes used in \ifm\ and \imb\ play the role of latent communities gathering nodes sharing unobserved properties. Local preferential attachment can thus be studied in stochastic mixed membership models by studying how preferential attachment is captured within latent classes. This nevertheless entails that the latent classes be set in one way or another, meaning that the question of whether stochastic mixed membership models comply with the local preferential attachment effect only makes sense in $\me$, and not in $\mg$.
 
 For \textbf{\ifm}, the situation wrt to local preferential attachment is very similar to the one for global preferential attachment. This is due to the fact that, in $\M_e$ (i.e. given $F$ and $\Phi$), a local degree can be defined in the same way as the global degree above.
 
