--- a/JASA/content/related.tex
+++ b/JASA/content/related.tex
@@ -4,7 +4,7 @@
 
 Recently,  the class of stochastic mixed membership models have been successfully used for link prediction and structure discovery in social networks. For example, in \cite{AMMSB}, the authors  propose an adaptation of mixed-membership stochastic block model (MMSB) called a-MMSB, where "a" stands for assortative, and they use it for discovering overlapping communities in large networks having millions of nodes. The weight matrix is constrained to have a fixed small value outside its diagonal. A non parametric dynamic version of MMSB model has also been introduced to  handle temporal networks \cite{fan2015dynamic}. The latent feature model (LFM) has also been extended in several ways, to handle non-negative weights in \cite{IMRM} and with a more subtle latent feature structure in \cite{ILAM}. Nevertheless, the characterization of these models with regards to the properties of the networks remains to be explored, as mentioned in \cite{jacobs2014unified}.
 
-In this article, we focus on \textit{preferential attachment}, a well known property of social networks \cite{Newman2010, Barabasi2003}. This property has been emphasized in previous studies, for example for modeling and generating artificial networks reflecting properties of real networks, as in the model by Barab\`asi-Albert \cite{albert2002statistical}, the model by Buckley and Osthus \cite{Buckley2001}, which integrates a preferential attachment mechanism, or in the Dancer model for generating dynamic attributed networks with community structures \cite{Largeron2017}. Preferential attachment has also  been exploited for improving methods for solving classical tasks such as community detection \cite{Ciglan2013} or link prediction \cite{Zeng2016}.
+In this article, we focus on \textit{preferential attachment}, a well-known property of social networks \cite{Newman2010, Barabasi2003}. This property has been emphasized in previous studies, for example for modeling and generating artificial networks reflecting properties of real networks, as in the model by Barab\`asi-Albert \cite{albert2002statistical}, the model by Buckley and Osthus \cite{Buckley2001}, which integrates a preferential attachment mechanism, or in the Dancer model for generating dynamic attributed networks with community structures \cite{Largeron2017}. Preferential attachment has also  been exploited for improving methods for solving classical tasks such as community detection \cite{Ciglan2013} or link prediction \cite{Zeng2016}.
 
 That said, few theoretical works have been conducted to study to what extent stochastic models comply with this property. 
 Orbanz and Roy  pointed out that models belonging to the family of infinitely exchangeable Bayesian graph models cannot generate sparse networks and are thus less compatible with power law degree distributions \cite{orbanz2015bayesian}. Consequently, Lee \textit{et al.}  proposed a random network model in order to capture the power law typical of the degree distribution in social networks \cite{Lee2015}. However the model remains challenging to use in practice, especially for link prediction, due to the relaxation of the exchangeability assumption.~\\
