--- a/JASA/journal_version.tex
+++ b/JASA/journal_version.tex
@@ -148,7 +148,7 @@ Univ Lyon, UJM-Saint-Etienne, CNRS, Institut d’Optique Graduate School, LHC\\
 %\bigskip
 
 \begin{abstract}
-{We assess here whether standard stochastic mixed membership models are adapted for link prediction in social networks by studying how they handle preferential attachment. Preferential attachment charaterizes the propensity of users, in a given social network, to connect to users who have already a lot of connections. Preferential attachement can be global, in which case nodes are connected across communities, and/or local to the network communities. We first introduce in this study formal definitions for both global and local preferential attachement, in different settings, prior to study how standard stochastic mixed membership models behave. Our theoretical analysis reveals that these models do not comply with global preferential attachment, whereas their compliance to local preferential attachment depends on whether the memberships to latent factors are hard or soft, and in the latter case on whether the underlying latent factor distribution is bursty or not. We illustrate these elements on both synthetic and real networks.}
+{We assess here whether standard stochastic mixed membership models are adapted for link prediction in social networks by studying how they handle preferential attachment. Preferential attachment characterizes the propensity of users, in a given social network, to connect to users who have already a lot of connections. Preferential attachment can be global, in which case nodes are connected across communities, and/or local to the network communities. We first introduce in this study formal definitions for both global and local preferential attachment, in different settings, prior to study how standard stochastic mixed membership models behave. Our theoretical analysis reveals that these models do not comply with global preferential attachment, whereas their compliance to local preferential attachment depends on whether the memberships to latent factors are hard or soft, and in the latter case on whether the underlying latent factor distribution is bursty or not. We illustrate these elements on both synthetic and real networks.}
 {bayesian model, social networks, preferential attachment.}
 \\
 
