--- a/JASA/content/concl.tex
+++ b/JASA/content/concl.tex
@@ -2,13 +2,13 @@
 \section{Conclusion}
 \label{sec:concl}
 
-We have studied whether stochastic mixed membership models, such as \ifm\ and \imb\, can generate new links while satisfying an important property frequently observed in real social networks, namely the preferential attachment. To do so, we have introduced formal definitions adapted for this property in a global and a local context where edge are either considered across the full network or inside communities. We have analyzed how these models behave according to those definitions. We  have shown that stochastic mixed membership models do not comply with global preferential attachment. The situation is however more contrasted when the property is considered at the local level: \imb\ enforces a partial local preferential attachment whereas \ifm\ does not.~\\
+We have studied whether stochastic mixed membership models, such as \ifm\ and \imb\, can generate new links while satisfying an important property frequently observed in real social networks, namely the preferential attachment. To do so, we have introduced formal definitions adapted for this property in a global and a local context where edges are either considered across the full network or inside communities. We have analyzed how these models behave according to those definitions. We  have shown that stochastic mixed membership models do not comply with global preferential attachment. The situation is however more contrasted when the property is considered at the local level: \imb\ enforces a partial local preferential attachment whereas \ifm\ does not.~\\
 
 These findings have been validated experimentally on two real and two artificial networks that have different degrees of global and local preferential attachment. An important, practical finding of our study is that \imb, usually considered of lesser "quality" than \ifm, can indeed yield better results on bursty networks (\textit{i.e.} networks with preferential attachment) when the number of training data is limited.~\\
 
 There are many directions to extend this work with the motivation of improving our theoretical understanding of graphical models for link prediction in complex networks. A interesting extension is to examine the relation between the local preferential attachment and the dynamic of the latent classes.
 %For example, some special value of the hyperparameters, of the non-parametric priors, could lead to a very large number of classes or, at the opposite, just one class. Between these two extremes, that goes from a vanishing local aspect of the degree distribution to a number of classes that overfit the data, on can ask how this parameter affect the global and the local degree distribution of a random graph.  
-An other direction of interest in the line of this work is to study how the preferential attachment relate to the sparsity of a network and how the exchangeability assumption should be relaxed in order to have models that naturally comply with both the preferential attachment and the sparsity properties.
+An other direction of interest in the line of this work is to study how the preferential attachment relates to the sparsity of a network and how the exchangeability assumption should be relaxed in order to have models that naturally comply with both the preferential attachment and the sparsity properties.
 
 %For instance, a fundamental result is the Aldous-Hoover theorem, which implies that exchangeable random graphs cannot be sparse \cite{orbanz2015bayesian}. It seems that the sparsity is related in some way to the preferential attachment in a network. Thus, the following question arises: would it be realistic to assume the exchangeability hypothesis for the local case but not for the global case, and how this fact impacts the burstiness of the global degree distribution and the sparsity of the graph.
 
