--- a/JASA/img/burst_ilfm.tex
+++ b/JASA/img/burst_ilfm.tex
@@ -17,7 +17,7 @@
          \centering                                                                      
       \includegraphics[width=0.45\textwidth]{img/burst/4_prop2_process_local_me__95}
 \end{subfigure}                                                                          
-\caption{Local burstiness process for ILFM illustrated by the probability to generate new links for degree at step $p$. The model is fitted with the Manufacturing and networks1 networks for respectively line 1 and 2. First row is for a value of the generating step $p=85\%$(percentage of the total number of nodes $N$ and $p=95\%$ for the second row . }
+\caption{Local burstiness process for ILFM illustrated by the probability to generate new links for degree at step $p$. The model is fitted with the Manufacturing and networks1 networks for respectively line 1 and 2. First row is for a value of the generating step $p=85\%$ (percentage of the total number of nodes $N$) and $p=95\%$ for the second row . }
 \label{fig:burst_ilfm}
 
 
