--- a/JASA/content/models.tex
+++ b/JASA/content/models.tex
@@ -1,7 +1,7 @@
 \section{Stochastic Mixed Membership Models}
 \label{sec:background}
 
-Stochastic mixed membership models are generative models that rely on latent factors (also called latent \textit{classes} or \textit{features}) for modeling relational data such as links in social networks represented by a graph $G=(V,E)$, where $V$ is a a set of nodes and $E$ a set of edges between these nodes.
+Stochastic mixed membership models are generative models that rely on latent factors (also called latent \textit{classes} or \textit{features}) for modeling relational data such as links in social networks represented by a graph $G=(V,E)$, where $V$ is a set of nodes and $E$ a set of edges between these nodes.
 
 In the remainder, we denote by $N$ the number of nodes in this graph ($N = |V|$) and by $Y$ the adjacency matrix of the graph $G$ ($y_{ij}=1$ if there is a link between nodes $i$ and $j$, $1 \le i,j \le N$; $y_{ij} = 0$ otherwise). Without loss of generality, we assume that the graph is undirected, the directed case being a special case of the undirected one.
 
@@ -22,7 +22,7 @@ y_{ij} \sim \mathrm{Bern}(\sigma(\mat{f}_{i} \mat{\Phi} \mat{f}_{j}^\top))
 \end{equation*}
 \end{enumerate}
 %
-where $^\top$ dentotes the transpose and  $\sigma()$ is the sigmoid function, mapping $[-\infty, +\infty]$ values to [0,1], and where $y_{ij}$ is a binary variable indicating that a link has been generated ($y_{ij}=1$) or not ($y_{ij}=0$). We will denote by $\mat{Y}$ the $N \times N$ matrix with elements $y_{ij}$. Finally, $\mat{f}_{i}$ denotes the row feature vector corresponding to the $i^{th}$ row of $\mat{F}$.
+where $^\top$ denotes the transpose and  $\sigma()$ is the sigmoid function, mapping $[-\infty, +\infty]$ values to [0,1], and where $y_{ij}$ is a binary variable indicating that a link has been generated ($y_{ij}=1$) or not ($y_{ij}=0$). We will denote by $\mat{Y}$ the $N \times N$ matrix with elements $y_{ij}$. Finally, $\mat{f}_{i}$ denotes the row feature vector corresponding to the $i^{th}$ row of $\mat{F}$.
 
 This model makes use of two real hyper-parameters, one for the IBP process ($\alpha$), and one for the variance of the normal distribution underlying the weight matrix ($\sigma_w$). In the case of undirected networks, the matrices $\mat{Y}$ and $\mat{\Phi}$ are symmetric and only their upper (or lower) diagonal parts are generated. Lastly, both $\mat{F}$ and $\mat{\Phi}$ are infinite matrices. In practice however, one always deals with a finite number of latent features. A graphical representation of this model is given in Figure~\ref{fig:mmm} (left).~\\
 
